# car_ws

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  arena_fix.sh  backup.joy.launch  blue_dual_ekf_navsat.launch.py  blue_dual_ekf_navsat_params.yaml  bluebot_config.yml  bringup.launch2.py  build.sh  calibrate_compass.py  car_launch.py  compass_calibration.py  dependencies.txt  desktop_launch.py  detect_car_state.py  docker-compose.yml  ekf.yaml  ekf_launch.py  fake_car_gps.sh  fake_gps.sh  gps_waypoint_follower.launch.py  interactive_waypoint_follower.py  joy.launch  lidar_launch.py  mapviz.launch.py  mapviz_settings.mvc  nav2_no_map_params.yaml  new_calib  park_fix.sh  pi_launch.py  race.py  route_scribe.py  run_calibration.sh  rviz_config.rviz  saved_map.pgm  saved_map.yaml  scan_filter.py  (+2 more)
docker/: Dockerfile  build  start
maps/: brians_house.pgm  brians_house.yaml
setup/: 49-teensy.rules
sounds/: notes.txt  radio.sh  vol_dn.sh  vol_up.sh
src/car/: CMakeLists.txt  package.xml
src/car/params/: beebot_parameters.yaml  bluebot_parameters.yaml  clearbot_parameters.yaml  default_parameters.yaml
src/car/src/: ackermann.cpp  ackermann.h  car.cpp  car_controller.cpp  car_instruments.cpp  geometry.h  logger.cpp  lookup_table.cpp  lookup_table.h  speedometer.cpp  speedometer.h
src/car_actions/: CMakeLists.txt  package.xml
src/car_actions/include/: cone_follower_client.hpp
src/car_actions/src/: bt.cpp  cone_follower.cpp  cone_follower_client.cpp  follow_cone.cpp  race.cpp  rotate_in_place_node.cpp
src/car_msgs/: CMakeLists.txt
src/car_msgs/action/: FollowCone.action
src/car_msgs/msg/: RcCommand.msg  Speedometer.msg  Status.msg  Update.msg
src/cone_detector/: CMakeLists.txt  package.xml
src/cone_detector/launch/: cone_detector.launch.py
src/cone_detector/params/camera/: color.yaml
src/cone_detector/src/: cone_detector_node.cpp  cone_follower.cpp
src/gps_fixer/: CMakeLists.txt  package.xml
src/gps_fixer/src/: gps_fixer.cpp
src/nav2_bringup/: CMakeLists.txt
src/nav2_bringup/behavior_trees/: navigate_w_replanning_time2.xml
src/nav2_bringup/params/: nav2_params.yaml
src/rosbridge_cpp/: CMakeLists.txt  package.xml
src/rosbridge_cpp/include/: json_encoder.hpp  ros2_introspection.hpp  stringtree.hpp
src/rosbridge_cpp/src/: json_encoder.cpp  ros2_introspection.cpp  rosbridge_cpp.cpp  stringtree.cpp
src/teleop_steam/: CMakeLists.txt  package.xml
src/teleop_steam/src/: teleop_steam.cpp
src/tf2_web_republisher/: CMakeLists.txt  package.xml
teensy/: COLCON_IGNORE  README.md  platformio.ini
teensy/extra_packages/car_msgs/: CMakeLists.txt  package.xml
teensy/extra_packages/car_msgs/msg/: Update.msg
teensy/extra_packages/nmea_msgs/: CMakeLists.txt  package.xml
teensy/src/: ak8975.cpp  ak8975.h  auto_mode.cpp  auto_mode.h  blinker.cpp  event_queue.cpp  event_queue.h  fsm.cpp  fsm.h  hand_mode.cpp  hand_mode.h  logger.cpp  main.cpp  manual_mode.cpp  manual_mode.h  mpu9150.cpp  mpu9150.h  off_mode.cpp  off_mode.h  pwm_input.cpp  pwm_input.h  qmc5883.cpp  qmc5883.h  remote_mode.cpp  remote_mode.h  rx_event.cpp  rx_event.h  rx_events.cpp  rx_events.h  servo2.cpp  statistics.cpp  task.cpp
web/static/: index.html  index.js  viewer.js
