<?xml version="1.0"?>
<package format="3">
  <name>car_actions</name>
  <version>0.0.1</version>
  <description>Ros actions for car</description>


  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="berickson@gmail.com">sachin</maintainer>
  <author>Brian Erickson</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>car_msgs</depend>
  <depend>cone_detector</depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
